# backend/api/swagger/pipeline.swagger.json
@@ -179,6 +179,36 @@
         ]
       }
     },
+    "/apis/v1beta1/pipeline_versions/{version_id}/templates": {
+      "get": {
+        "operationId": "GetPipelineVersionTemplate",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/apiGetTemplateResponse"
+            }
+          },
+          "default": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/apiStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "version_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "PipelineService"
+        ]
+      }
+    },
     "/apis/v1beta1/pipelines": {
       "get": {
         "operationId": "ListPipelines",
